// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion Renders the UI snapshot correctly 1`] = `
<div
  className="chakra-accordion css-1xdhyk6"
  id="ds-accordion-accordian"
  onKeyDown={[Function]}
>
  <div
    className="chakra-accordion__item css-1fsnuue"
  >
    <button
      aria-controls="accordion-panel-ds-accordion-accordian-item-0"
      aria-expanded={false}
      className="chakra-accordion__button css-1rvudez"
      disabled={false}
      id="accordion-button-ds-accordion-accordian-item-0"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    >
      <span
        className="css-1kmgev1"
      >
        Gerry Kellman
      </span>
      <svg
        aria-hidden={true}
        className="chakra-icon accordion-icon css-1b9sovw"
        data-file-name="SvgPlus"
        focusable={false}
        id="ds-accordion-accordian-icon-0"
        role="img"
        title="plus icon"
      />
    </button>
  </div>
</div>
`;

exports[`Accordion Renders the UI snapshot correctly 2`] = `
<div
  className="chakra-accordion css-1xdhyk6"
  id="ds-accordion-accordian"
  onKeyDown={[Function]}
>
  <div
    className="chakra-accordion__item css-1fsnuue"
  >
    <button
      aria-controls="accordion-panel-ds-accordion-accordian-item-0"
      aria-expanded={false}
      className="chakra-accordion__button css-1rvudez"
      disabled={false}
      id="accordion-button-ds-accordion-accordian-item-0"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    >
      <span
        className="css-1kmgev1"
      >
        Gerry Kellman
      </span>
      <svg
        aria-hidden={true}
        className="chakra-icon accordion-icon css-1b9sovw"
        data-file-name="SvgPlus"
        focusable={false}
        id="ds-accordion-accordian-icon-0"
        role="img"
        title="plus icon"
      />
    </button>
  </div>
</div>
`;

exports[`Accordion Renders the UI snapshot correctly 3`] = `
<div
  className="chakra-accordion css-1t0bvx9"
  id="ds-accordion-accordian"
  onKeyDown={[Function]}
>
  <div
    className="chakra-accordion__item css-1fsnuue"
  >
    <button
      aria-controls="accordion-panel-ds-accordion-accordian-item-0"
      aria-expanded={false}
      className="chakra-accordion__button css-1rvudez"
      disabled={false}
      id="accordion-button-ds-accordion-accordian-item-0"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    >
      <span
        className="css-1kmgev1"
      >
        Gerry Kellman
      </span>
      <svg
        aria-hidden={true}
        className="chakra-icon accordion-icon css-1b9sovw"
        data-file-name="SvgPlus"
        focusable={false}
        id="ds-accordion-accordian-icon-0"
        role="img"
        title="plus icon"
      />
    </button>
  </div>
</div>
`;

exports[`Accordion Renders the UI snapshot correctly 4`] = `
<div
  className="chakra-accordion css-1xdhyk6"
  data-testid="testid"
  id="ds-accordion-accordian"
  onKeyDown={[Function]}
>
  <div
    className="chakra-accordion__item css-1fsnuue"
  >
    <button
      aria-controls="accordion-panel-ds-accordion-accordian-item-0"
      aria-expanded={false}
      className="chakra-accordion__button css-1rvudez"
      disabled={false}
      id="accordion-button-ds-accordion-accordian-item-0"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    >
      <span
        className="css-1kmgev1"
      >
        Gerry Kellman
      </span>
      <svg
        aria-hidden={true}
        className="chakra-icon accordion-icon css-1b9sovw"
        data-file-name="SvgPlus"
        focusable={false}
        id="ds-accordion-accordian-icon-0"
        role="img"
        title="plus icon"
      />
    </button>
  </div>
</div>
`;

exports[`Accordion Renders the UI snapshot correctly 5`] = `
<div
  className="chakra-accordion css-1xdhyk6"
  id="ds-accordion-accordian"
  onKeyDown={[Function]}
>
  <div
    className="chakra-accordion__item css-1fsnuue"
  >
    <button
      aria-controls="accordion-panel-ds-accordion-accordian-item-0"
      aria-expanded={false}
      className="chakra-accordion__button css-1rvudez"
      disabled={false}
      id="accordion-button-ds-accordion-accordian-item-0"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    >
      <span
        className="css-1kmgev1"
      >
        Gerry Kellman
      </span>
      <svg
        aria-hidden={true}
        className="chakra-icon accordion-icon css-1b9sovw"
        data-file-name="SvgPlus"
        focusable={false}
        id="ds-accordion-accordian-icon-0"
        role="img"
        title="plus icon"
      />
    </button>
  </div>
</div>
`;

exports[`Accordion Renders the UI snapshot correctly 6`] = `
<div
  className="chakra-accordion css-1xdhyk6"
  id="ds-accordion-accordian"
  onKeyDown={[Function]}
>
  <div
    className="chakra-accordion__item css-1fsnuue"
  >
    <button
      aria-controls="accordion-panel-ds-accordion-accordian-item-0"
      aria-expanded={false}
      className="chakra-accordion__button css-19i7nb2"
      disabled={false}
      id="accordion-button-ds-accordion-accordian-item-0"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    >
      <span
        className="css-1kmgev1"
      >
        Gerry Kellman
      </span>
      <svg
        aria-hidden={true}
        className="chakra-icon accordion-icon css-1b9sovw"
        data-file-name="SvgPlus"
        focusable={false}
        id="ds-accordion-accordian-icon-0"
        role="img"
        title="plus icon"
      />
    </button>
  </div>
</div>
`;

exports[`Accordion Renders the UI snapshot correctly 7`] = `
<div
  className="chakra-accordion css-1xdhyk6"
  id="ds-accordion-accordian"
  onKeyDown={[Function]}
>
  <div
    className="chakra-accordion__item css-1fsnuue"
  >
    <button
      aria-controls="accordion-panel-ds-accordion-accordian-item-0"
      aria-expanded={false}
      className="chakra-accordion__button css-k7suym"
      disabled={false}
      id="accordion-button-ds-accordion-accordian-item-0"
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      type="button"
    >
      <span
        className="css-1kmgev1"
      >
        Gerry Kellman
      </span>
      <svg
        aria-hidden={true}
        className="chakra-icon accordion-icon css-1b9sovw"
        data-file-name="SvgPlus"
        focusable={false}
        id="ds-accordion-accordian-icon-0"
        role="img"
        title="plus icon"
      />
    </button>
  </div>
</div>
`;
